--- a/Workshop 1 - Athens/Adv0_Preparation.Rmd
+++ b/Workshop 1 - Athens/Adv0_Preparation.Rmd
@@ -23,20 +23,24 @@ This document will help you to prepare for the HARMONY advanced training worksho
 
 # Software installation
 
-You need to install R (we recommend version 3.6.2 or later) from https://cran.r-project.org/ and we recommend that you also use Rstudio which can be downloaded separately from https://www.rstudio.com/products/rstudio/download/
+You need to install R (version 3.6.0 or later) from https://cran.r-project.org/ and we recommend that you also use Rstudio which can be downloaded separately from https://www.rstudio.com/products/rstudio/download/
 
-Please also install the latest versions of the following R packages:  PriorGen, rjags, runjags, coda, TeachingDemos
+Please also install the latest versions of the following R packages:  PriorGen, rjags, runjags, coda, TeachingDemos, HSROC, MCMCpack, mada
 
 You will also need the standalone JAGS software (version 4.3.0 or later) for the course - download the installer for your platform from here:  https://sourceforge.net/projects/mcmc-jags/files/JAGS/4.x/
 
 To check that you have installed the software correctly please run the following code within R (or RStudio) and make sure that no errors are produced:
 
 ```{r, results="hide", message=FALSE}
+stopifnot(getRversion() >= "3.6.0")
 stopifnot(require('PriorGen'))
 stopifnot(require('rjags'))
 stopifnot(require('runjags'))
 stopifnot(require('coda'))
 stopifnot(require('TeachingDemos'))
+stopifnot(require('HSROC'))
+stopifnot(require('MCMCpack'))
+stopifnot(require('mada'))
 stopifnot(testjags()$JAGS.available)
 stopifnot(numeric_version(testjags()$JAGS.version) >= "4.3.0")
 stopifnot(testjags()$rjags.found)
@@ -237,7 +241,7 @@ with(results, plot(parameter, prior, type='l'))
 with(results, plot(parameter, posterior, type='l'))
 ```
 
-The shape of the posterior is determined by that of both the likelihood and the prior - as we would expect given that it is simply a combination of the two.  Try changing the parameters of the Beta distribution used for the prior (for example $Beta(1,1)$ or $Beta(5,2)$) and see what happens to these graphs.
+The shape of the posterior is determined by that of both the likelihood and the prior - as we would expect given that it is simply a combination of the two.  Notice also that the posterior will always be more precise (i.e. will have a smaller variance) than both the prior and the likelihood, as it is effectively combining the information available from the priors and the data.  Try changing the parameters of the Beta distribution used for the prior (for example $Beta(1,1)$ or $Beta(5,5)$ or $Beta(5,2)$) and see what happens to these graphs.
 
 
 ## Summarising the Posterior
@@ -257,7 +261,7 @@ cat('Median:', md, '\n')
 cat('95% CI:', ci[1], '-', ci[2], '\n')
 ```
 
-Donø't worry for now about exactly how these are calculated.  But we can overlay the estimates onto the plot of the posterior to help us interpret them:
+Don't worry for now about exactly how these are calculated.  But we can overlay the estimates onto the plot of the posterior to help us interpret them:
 
 ```{r echo=FALSE}
 with(results, plot(parameter, posterior, type='l'))
@@ -282,24 +286,19 @@ In order to solve this problem we need a new approach.  Rather than evaluating a
 
 ```{r}
 metropolis <- function(burnin = 0, sample = 10000, sigma = 0.05, 
-              initial_value = 0.05, data=c(7,10), priors=c(2,2)){
+              initial_value = 0.05){
   stopifnot(initial_value > 0, initial_value < 1)
   stopifnot(sigma > 0)
   burnin <- as.integer(burnin)
   sample <- as.integer(sample)
   stopifnot(burnin >= 0)
   stopifnot(sample > 0)
-  stopifnot(length(data)==2)
-  stopifnot(length(priors)==2)
-  stopifnot(all(priors>=0))
-  stopifnot(all(data>=0))
-  stopifnot(data[2] >= data[1])
-  
+
   # Redefine these to work on the log scale:
   llikelihood_fun <- function(prevalence)
-    dbinom(data[1], data[2], prevalence, log=TRUE)
+    dbinom(7, 10, prevalence, log=TRUE)
   lprior_fun <- function(prevalence) 
-    dbeta(prevalence, priors[1], priors[2], log=TRUE)
+    dbeta(prevalence, 2, 2, log=TRUE)
 
   parameters <- numeric(burnin+sample)
   parameters[1] <- initial_value
@@ -404,7 +403,10 @@ set.seed(2020-02-08)
 samples <- metropolis(burnin = 100, sample = 1000, initial_value=0.99)
 ```
 
-The red parts of the chains look quite differnt (one starts low the other starts high), but by the time it gets to the red part they seem to be moving around in the same area.  At this point we say that the chains have converged, which is just a fancy way of saying that it is safe to assume the next samples are from the true posterior.  Assessing convergence is a crucial (and sometimes tricky) part of using MCMC in practice.
+The start of the red parts of the chains look quite differnt (one starts low the other starts high), but by the time it gets to the end of the red part they seem to be moving around in the same area.  At this point we say that the chains have converged, which is just a fancy way of saying that it is safe to assume the next samples are from the true posterior.  Note that it doesn't matter if we have a burnin period that is too long (e.g. in this case it seems that 50 iterations would have been enough) - it is far safer to remove more than you think is necessary rather than risking not removing enough.  It is also impossible to know a priori how long the burnin will take, so if you don't specify a long enough burnin period then you may have to remove the first part of the sampled chains manually.  This is another reason to err on the side of caution and specify a longer burnin period than you think will be needed.
+
+*Important point:*  Assessing convergence (and ensuring adequate burnin) is a crucial (and sometimes tricky) part of using MCMC in practice.
+
 
 ## Effective sample size
 
@@ -444,7 +446,20 @@ cat("95% CI of samples: ", sci[1,1], '-', sci[1,2], '\n')
 cat('True posterior 95% CI:', ci[1], '-', ci[2], '\n')
 ```
 
-Our sampled posterior is now much closer to the true posterior.
+Our sampled posterior is now much closer to the true posterior, although there is still a small difference due to the inherent randomness of the Monte Carlo integration.  This also means that every time we run this simulation we will get a slightly different anser - if we want to ensure we get precisely the same result then we need to set the random number generator seed in R using the set seed function before running the simulation:
+
+```{r}
+set.seed(2020-02-08)
+samples <- metropolis(burnin = 100, sample = 1000, initial_value=0.99)
+cat("Mean of samples: ", mean(samples), '\n')
+
+set.seed(2020-02-08)
+samples <- metropolis(burnin = 100, sample = 1000, initial_value=0.99)
+cat("Mean of samples: ", mean(samples), '\n')
+```
+
+
+*Important point:*  MCMC is a numerical approximation to the posterior, so if we want a good approximation then we need to be sure our effective sample size is sufficient.
 
 
 ## Exercise 1
